Fix stylesheet link in Html
Fix stylesheet link in Html

--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
   <link href="css/style.css" rel="stylesheet" media="screen, print">
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
       <!-- CM Style sheet -->
-  <link href="css/cmStyle.css" rel="stylesheet" media="screen, print">
+  <link href="css/cmstyle.css" rel="stylesheet" media="screen, print">
   <!--Import Google Font-->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
