--- a/template/css/cmstyle.css
+++ b/template/css/cmstyle.css
@@ -85,7 +85,8 @@ pre {
   background-color: #ffffff;
   border-radius: 4px;
   border-style: solid;
-  border-top: thick solid #02caca;  
+  border-top: thick solid #02caca;
+  color:black;
 }
 
 pre.language-html {
