Removed url from nav.
Adding the url on the nav by default
was a bad idea due to how long the url
could be.  This removes it.

--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,7 @@
         {{/if}}
       {{else}}
         <li {{#if hidden}}class="hide" {{/if}}data-group="{{group}}" data-name="{{name}}" data-version="{{version}}">
-          <a href="#api-{{group}}-{{name}}">{{url}} - {{title}}</a>
+          <a href="#api-{{group}}-{{name}}">{{title}}</a>
         </li>
       {{/if}}
     {{/if}}
