添加文件选择支持

--- a/template/index.html
+++ b/template/index.html
@@ -248,7 +248,8 @@
               <div class="control-group">
                 <label class="control-label" for="sample-request-header-field-{{field}}">{{field}}</label>
                 <div class="controls">
-                  <div class="input-append">>
+                  <div class="input-append">
+				
                     <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-header" data-sample-request-header-name="{{field}}" data-sample-request-header-group="sample-request-header-{{@../index}}">
                     <span class="add-on">{{{type}}}</span>
                   </div>
@@ -271,8 +272,12 @@
                 <label class="control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
                 <div class="controls">
                   <div class="input-append">>
-                    <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
-                    <span class="add-on">{{{type}}}</span>
+					{{#ifequals type "file"}}
+                    <input type="file" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
+                    {{else}}
+					 <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
+					{{/ifequals}}
+					<span class="add-on">{{{type}}}</span>
                   </div>
                 </div>
               </div>
