--- a/template/index.html
+++ b/template/index.html
@@ -18,6 +18,7 @@
   <div class="sidenav-search">
     <label>Search</label>
     <input class="form-control search" type="text">
+    <span class="search-reset">x</span>
   </div>
   <ul class="sidenav nav nav-list list">
   {{#each nav}}
