added support for @apiDeprecated tag

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -488,6 +488,12 @@ ul.nav-tabs {
   margin: 0;
 }
 
+p.deprecated span{
+  color: #ff0000;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 /* ------------------------------------------------------------------------------------------
  * Print
  * ------------------------------------------------------------------------------------------ */
